# dev-tools

./: .dev-config.yaml  .editorconfig  .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  dev-tools.py  docker-compose.yml  go.mod  go.sum  install.sh  main.go  pyproject.toml
.beads/: issues.jsonl  last-touched  sync-state.json
.beads/backup/: backup_state.json  manifest
.github/workflows/: lint.yml  release.yml  test.yml
cmd/: built_in_commands.go  completion.go  completion_test.go  helpers.go  helpers_test.go  logging.go  logging_test.go  root.go  root_test.go
internal/colors/: colors.go  colors_test.go
internal/commands/: built_in.go  built_in_test.go  cleanup.go  completion.go  completion_test.go  constants.go  daemon.go  format.go  format_test.go  logs.go  logs_test.go  onboard.go  registry.go  registry_test.go  schema.go  schema_test.go  status.go  validate.go  validate_test.go
internal/config/: config.go  config_refactored_test.go  config_test.go  errors.go  interfaces.go  schema.go  schema_test.go  types.go
internal/errors/: errors.go  errors_test.go
internal/executor/: constants.go  docker_helpers.go  errors.go  errors_test.go  executor.go  executor_command.go  executor_coverage_test.go  executor_daemon.go  executor_docker.go  executor_retry.go  executor_services.go  executor_shell.go  executor_signals.go  executor_test.go  executor_validation.go  executor_watch.go  types.go  (+7 more)
test-tools/: cmd.sh
tests/: test_cli.py  test_command_executor.py  test_config_parser.py  test_integration.py  test_logger_setup.py
(+11 files in other folders)
