[project]
name = "dev-tools"
version = "0.6.0"
description = "dev-tools helper for agentic coders"
readme = "README.md"
authors = [
    { name = "Olivier Sirven", email = "the.slaa+dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2"
]

[project.scripts]
dev-tools = "dev_tools.cli:main"

[build-system]
requires = ["uv_build>=0.4"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_tools"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]
